Improve error reporting for too many members, support 64
Properly supports up to 64 members for args and reports a special type for when an incoming type has too many members or is otherwise unpackable.
Also adds an example case of having 65 members (commented) that would cause a compile error.

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,11 +1,12 @@
 tests = [
     'test_simple',
 ]
+ex_fail = []
 suites = {
-    'test_simple': ['simple']
+    'test_simple': ['simple'],
 }
 
-foreach t : tests
+foreach t : tests + ex_fail
     e = executable(t, [t + '.cpp'], dependencies: [gtest_dep, gtest_main_dep, clapp_dep])
-    test(t, e, suite: suites[t])
+    test(t, e, suite: suites[t], should_fail: t in ex_fail)
 endforeach
